
Attacker commander may move characters in both directions (?)

Check what happens if a finalize round finds open attack lobby

#########################################################

Version 5.8.2 (29.11.2021)
- ADDED: First contributed planet image (Tukayyid by Prator Andreas, 998)

Version 5.8.1 (28.11.2021)
- FIXED: Jump from lobby to first step of invasion

Version 5.8.0 (26.11.2021)
- ADDED: Automatic char generation for new users
- ADDED: Faction shortname added to users of the lobby
- FIXED: Handling of lobby
- CHANGED: Map screenshot will be skipped on dev computers
- CHANGED: Continue button in lobby jumps into invasion steps

Version 5.7.17 (22.11.2021)
- FIXED: Kicking users

Version 5.7.16 (21.11.2021)
- FIXED: Doubled users in lobby
- CHANGED: SQL log can now be switched on/off within code

Version 5.7.15 (19.11.2021)
- ADDED: PHP script to reset attacks
- ADDED: PHP script to reset season
- FIXED: Bug while saving chars in lobby
- CHANGED: Shortened lines in log output
- CHANGED: Server now logs with log4j (can be configured)

Version 5.7.14 (15.11.2021)
- CHANGED: Fields in C3._HH_ATTACK_CHARACTER made Nullable (to fix object saving)
- REMOVED: Update check for DEV runs (local debug)

Version 5.7.13 (14.11.2021)
- FIXED: Storing character for an attack bugfix
- FIXED: Version check does not ask to install an older (online) version

Version 5.7.12 (13.11.2021)
- Fixes for the lobby

Version 5.7.10 (10.11.2021)
- CHANGED: Changed donation link to liberapay.com

Version 5.7.9 (09.11.2021)
- FIXED: Invasion lobby
- CHANGED: (Try) Thread execution of user info (to fix the NullPointer that sometimes fires after login)

Version 5.7.8 (07.11.2021)
- FIXED: Colors in ListViews
- FIXED: Offline Users are marked in yellow
- FIXED: IRC indicator circle moved to fit the right button

Version 5.7.7 (06.11.2021)
- UPDATRED: ASM -> 9.2
- ADDED: Patreon button to login screen
- CHANGED: Version numbers added to the parent pom.xml

Version 5.7.4 (03.11.2021)